models loaded successfully

--- a/templates/pages/results.html
+++ b/templates/pages/results.html
@@ -5,6 +5,10 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>Result:</h1><br/>
-    {{has_disease}}
+<div class="wrapper">
+    <div class="inner">
+        <h1 style="text-align:center;">Result:</h1><br/>
+        {{has_disease}}
+    </div>
+</div>
 {% endblock content %}
