--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,3 +131,11 @@ label , .input-elements {
     font-weight: bold;
     font-size: 18px;
 }
+
+.wrapper {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    margin-top:50px;
+}
